2006-09-29  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/workspace_inventory/__driver__.lua: This test has been
	broken since efe5767b8eebbc5440f543a08b8a3521e760a02a ; added files
	should also be marked as patched.

2006-09-26  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify.pl: Change the default monotone program
	from "monotone" to "mtn".

2006-09-26  Matt Johnston  <matt@ucc.asn.au>

	* cmd_netsync.cc (CMD(push/sync)): don't require a -k
    argument for a non-authed transport.

2006-09-26  Matt Johnston  <matt@ucc.asn.au>

	* cmd_ws_commit.cc (CMD(commit)): fail early if a key
	wasn't set.

2006-09-26  Marcel van der Boom  <marcel@hsdev.com>

	* lua_hooks.cc (hook_validate_commit_message): Add a branchname
	argument.
	* cmd_ws_commit.cc (commit): Pass it.
	* monotone.texi (Hooks): Document it.
	* tests/commit_validation_lua_hook/commit_validate.lua: Test it.

2006-09-25  Thomas Moschny  <thomas.moschny@gmx.de>

	* contrib/monotone.zsh_completion: Applied a patch by Bruce
	Stephens <monotone@cenderis.demon.co.uk>: Selectors can now be
	completed in addition to revision ids, using the new functions
	_mtn_tags and _mtn_public_keys together with _mtn_branches.
	Selector completion is done by _mtn_selector_or_revision.

2006-09-23  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (get_content_changed): use the file_content 
	make rather than the parent_name mark.

2006-09-23  Nathaniel Smith  <njs@pobox.com>

	* randomizer.{cc,hh}: Make randomizer a stateful struct, not a
	namespace.  Now, each test must instantiate its own randomizer,
	and the randomizer is deterministically seeded at each test, so
	the actual tests performed no longer depend on what other tests
	were run in this session.
	* diff_patch.cc, graph.cc, randomfile.hh, refiner.cc, roster.cc:
	Adjust accordingly.
	* roster.cc (perform_random_action): Remove stateless
	change_automaton struct.

2006-09-22  Nathaniel Smith  <njs@pobox.com>
