@@ -507,7 +507,7 @@ table.insert(tests, "bad_packet_args")
 table.insert(tests, "commit_update_multiple_heads_message")
 table.insert(tests, "diffing_with_explicit_rev_same_as_wc_rev")
 table.insert(tests, "normalized_filenames")
-table.insert(tests, "workspace_inventory")
+table.insert(tests, "automate_inventory")
 table.insert(tests, "rename_file_to_dir")
 table.insert(tests, "replace_file_with_dir")
 table.insert(tests, "replace_dir_with_file")
