@@ -1,3 +1,8 @@
+2006-10-04  Timothy Brownawell  <tbrownaw@gmail.com>
+
+	* automate.cc: Fix automate inventory.
+	"workspace_inventory" test should be named "automate_inventory".
+
 2006-09-29  Timothy Brownawell  <tbrownaw@gmail.com>
 
 	* tests/workspace_inventory/__driver__.lua: This test has been
